# LOLBAS

./: .gitattributes  .yamllint  .yamllint.yml  Advpack.md  BackgroundTaskHost.yml  Backlog.txt  CONTRIBUTING.md  CategoryList.md  Contribute.md  Ieadvpack.md  Ieframe.md  LOLBINS_File_Info  LOLBins.md  LOLLibs.md  LOLScripts.md  LOLTools.md  Mshtml.md  NOTICE.md  NOTICE.txt  Pcwutl.md  Projectnotes.md  Psr.yml  README.md  Reset.yml  Setupapi.md  Shdocvw.md  Shell32.md  Stordiag.yml  Syssetup.md  Url.md  YML-Schema.yml  YML-Template.yml  Zipfldr.md  certutil.yml.txt  choice.yml.txt  finger.md  finger.yml  pyproject.toml  vlc.yml
.github/: .yamllint  .yamllint.swp  CODEOWNERS  fix-new-lines.yml  yaml-lint-reviewdog.yml.bak
Mgmt-Scripts/: CreateMDFromYaml.ps1  Draft-MDFromYaml-webportal.ps1  MDFromYaml-master.ps1  MDFromYaml-webportal.ps1
OSBinaries/: Atbroker.exe.md  Atbroker.yml  Bash.exe.md  Bitsadmin.exe.md  Bitsadmin.yml  Cmdkey.yml  Cmstp.exe.md  Control.exe.md  Control.yml  Csc.exe.md  Cscript.exe.md  Dfsvc.exe.md  Diskshadow.yml  Dnscmd.exe.md  Esentutl.exe.md  Expand.exe.md  Explorer.exe.md  Extexport.exe.md  Extexport.yml  Findstr.exe.md  Findstr.yml  Forfiles.exe.md  Forfiles.yml  Gpscript.exe.md  Hh.yml  InfDefaultInstall.exe.md  Infdefaultinstall.yml  InstallUtil.exe.md  Makecab.exe.md  Makecab.yml  Mavinject.yml  Microsoft.Wrokflow.Compiler.xml  Microsoft.Wrokflow.Compiler.xoml  Msbuild.exe.md  Msdt.exe.md  Msdt.yml  Msiexec.exe.md  Msiexec.yml  Netsh.yml  (+37 more)
scripts/: enrich_with_splunk.py  lolbas_count.py  pyproject.toml
scripts/templates/: lolbas_count.j2
(+523 files in other folders)
